# clanker

./: .env.example  .gitignore  CLANKER_CONTEXT.md  INSTRUCTIONS.md  LICENSE  README.md  clanker  marvin_demo.py  pyproject.toml  thoughts.md
.EVENTUAL_APPS_TO_MIGRATE/recipes/: pyproject.toml
.EVENTUAL_APPS_TO_MIGRATE/recipes/recipes/: __init__.py  exports.py  storage.py
EVENTUAL_APPS_TO_MIGRATE/recipes/: README.md  RECIPE_AGENT_BRAINDUMP.md  main.py
EVENTUAL_APPS_TO_MIGRATE/resumes/: pyproject.toml
EVENTUAL_APPS_TO_MIGRATE/resumes/resumes/: models.py
apps/example/: README.md  daemon.py  demo_exports.py  main.py  pyproject.toml
apps/example/example/: __init__.py  exports.py  storage.py
apps/recipes/: README.md  main.py  pyproject.toml
apps/recipes/recipes/: __init__.py  cli.py  models.py  storage.py
apps/resumes/: README.md  pyproject.toml
apps/resumes/resumes/: __init__.py  agents.py  cli.py  pdf_generator.py  storage.py
clanker/: README.md  __init__.py  logger.py  models.py  pyproject.toml
clanker/storage/: __init__.py
data/default/: clanker.db
data/default/vault/test_app/: config.yml
data/default/vault/test_app/docs/: test.md
docs/dependency_distillations/: README.md  pydai_tools.md  pydantic_ai_messages.md
docs/dev_notes/: origins.md  rolling my own model framework.md  thoughts.md
docs/slop/: actually good claude emulation.md  carmack_evaluation.md  positioning_strategy.md
scratch/: README.md  UX_PATTERNS.md  demo_4_full_featured.py  marvin_demo.py  marvin_simple.py  pydantic-ai-scraps.py  pyproject.toml  uvtestingthing.py
scratch/docs/: app_abstraction.md  app_spec.md  interaction_patterns.md  thoughts.md  typer_discovery.md
scripts/: README.md  show_agent_context.py
src/clanker/: __init__.py  agent.py  apps.py  cli.py  console.py  daemon.py  exports.py  input_resolution.py  logger.py  models.py  onboarding.py  profile.py  runtime.py  tool_registry.py  tools.py
src/clanker/context/: __init__.py  builder.py  hints.py  manager.py  store.py  templates.py
src/clanker/context/snippets/: agent_behavior.md  app_context.md  app_structure.md  clanker_overview.md  cli_patterns.md  daemon_management.md  export_system.md  personality.md  storage_guide.md  tool_exports.md
src/clanker/context/templates/apps/: scaffold.md
src/clanker/context/templates/sessions/: generic.md
src/clanker/storage/: db.py  schema.py  vault.py
src/clanker/tools/: __init__.py  app_tool.py  bash_tool.py  llm_dev_tool.py  registry.py  toolsets.py
