[project]
name = "clanker-workspace"
version = "0.1.0"
description = "An LLM app environment."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marvin",
    "typer",
    "rich",
    "pydantic",
    "pydantic-ai",
    "pydantic-settings",
    "pyyaml",
    "loguru",
    "python-dotenv",
]

[tool.uv.workspace]
members = ["apps/*", "clanker", "scratch"]

[tool.uv.sources]
clanker = { workspace = true }

