[project]
name = "clanker"
version = "0.1.0"
description = "The clanker framework for building ai apps"
readme = "README.md"
authors = [
    { name = "Zach Meador", email = "contact@zachmeador.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru",
    "typer",
    "pydantic",
    "pydantic-ai",
    "rich",
    "tomlkit>=0.13.3",
]

[project.scripts]
clanker = "clanker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
