[project]
name = "clanker"
version = "0.1.0"
description = "Core clanker functionality with unified model system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["clanker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"