[project]
name = "resumes"
version = "0.1.0"
description = "Resume manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clanker",
    "weasyprint",
    "markdown",
    "typer",
    "rich",
    "pydantic",
    "pydantic-ai",
]

[tool.uv.sources]
clanker = { path = "../clanker", editable = true }
