[project]
name = "example"
version = "0.1.0"
description = "Personal journal app demonstrating all Clanker features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clanker",
    "typer",
    "rich",
]

[tool.uv.sources]
clanker = { path = "../../", editable = true }

# Clanker configuration
[tool.clanker.app]
summary = "Personal journal app demonstrating Vault, DB, and daemon features"
capabilities = ["journal", "storage", "search", "backup", "daemon"]
examples = [
  "add 'Had a great day today! #happy #work': add a new journal entry",
  "list --count 3: show recent entries", 
  "search happy: search entries containing 'happy'",
  "stats: show journal statistics",
  "backup: export all entries to JSON"
]

# CLI exports - what commands are available as tools
[tool.clanker.exports]
add = {cmd = "python main.py add {entry}", desc = "Add a new journal entry with optional hashtags"}
list = {cmd = "python main.py list --count {count}", desc = "Show recent journal entries"}
search = {cmd = "python main.py search {query}", desc = "Search journal entries by content or hashtags"}
stats = {cmd = "python main.py stats", desc = "Show journal statistics and analytics"}
backup = {cmd = "python main.py backup", desc = "Export all journal entries to JSON format in vault"}

# Daemon configuration
[tool.clanker.daemons]
summarizer = "python daemon.py --interval 86400"
