[project]
name = "resumes"
version = "0.1.0"
description = "AI-powered resume generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "weasyprint",
    "markdown",
    "clanker",
]

[project.scripts]
resumes = "resumes.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

